infrastructure/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-backend
  labels:
    app: taskmanager-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmanager-backend
  template:
    metadata:
      labels:
        app: taskmanager-backend
    spec:
      containers:
        - name: backend
          image: egor1248/devops_labs-backend:amd64
          ports:
            - containerPort: 3303
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: taskmanager-backend
  ports:
    - protocol: TCP
      port: 3303
      targetPort: 3303
  type: ClusterIP
