infrastructure/kubernetes/mongo-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-mongo
  labels:
    app: taskmanager-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmanager-mongo
  template:
    metadata:
      labels:
        app: taskmanager-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: taskmanager-mongo
spec:
  selector:
    app: taskmanager-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
